--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "heroku": "^8.1.9",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.4",
     "mongoose-paginate-v2": "^1.7.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
+    "path": "^0.12.7",
+    "sharp": "^0.32.4",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
