--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d lib",
     "start": "NODE_OPTIONS='--experimental-specifier-resolution=node' nodemon --exec babel-node app.js",
+    "start:socket": "NODE_OPTIONS='--experimental-specifier-resolution=node' nodemon --exec babel-node socket.js",
     "dev": "NODE_OPTIONS='--experimental-specifier-resolution=node' nodemon --exec babel-node app.js"
   },
   "keywords": [],
